# Vessel

./: README.md  pyproject.toml
examples/autonomous_pipeline/: ColdEmailPipeline_SKILL.md  broken_skill.py  broken_skill.py.bak  coldemailpipeline.py  simulate_v2.py  test_broken_skill.py  test_coldemailpipeline.py
final_simulation/: simulate_full_e2e.py
tests/test_cli/: test_main.py
tests/test_core/: test_base.py  test_circuit_breaker.py  test_pipeline.py
tests/test_evolution/: test_sandbox.py  test_updater.py
tests/test_harness/: test_runner.py
tests/test_mcp/: test_adapter.py  test_server.py
vessel/cli/: config.py  llm.py  main.py
vessel/core/: base.py  exceptions.py  pipeline.py
vessel/evolution/: sandbox.py  updater.py
vessel/harness/: runner.py
vessel/mcp/: adapter.py  server.py
